[tool.poetry]
name = "poetry install"
version = "0.1.0"
description = ""
authors = ["Oqla Alrefai <2015978054@ses.yu.edu.jo>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
